# SectorGateway

./: .gitignore  LICENSE  README.md  pants.toml  pyproject.toml
.github/workflows/: pr.yaml  release.yaml
scripts/: BUILD  build.sh
sgwtool/: __init__.py  cli.py
tests/: test_sgwtool.py
