[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgwtool"
version = "0.0.1"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
]

[tool.ruff]
src = [ "src",]
line-length = 120
target-version = "py312"
extend-exclude = ["tests"]
output-format = "grouped"

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [ "EXE001", "D100", "D203", "D212", "T201", "G004", "S507", "S202", "PTH207" ]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--capture=no --cov=pws --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
omit = [
    "*setup.py",
    "*tests/*",
    "*__global_coverage__/*",
]
